[gd_scene load_steps=61 format=3 uid="uid://cprvtoo5si7sx"]

[ext_resource type="Script" path="res://VFX/Effects/EnergyOrbs/EnergyOrb.gd" id="1_2ps41"]
[ext_resource type="Shader" uid="uid://4bqma1qx5xgw" path="res://VFX/Materials/OrbBackground.tres" id="2_2q3is"]
[ext_resource type="Texture2D" uid="uid://ckh1exvhdroly" path="res://Assets/Sprites/EnergyIconMasks/matter.png" id="2_b67sw"]
[ext_resource type="PackedScene" uid="uid://djujpfvecfgl2" path="res://Logic/Utility/OrbitalMovement.tscn" id="4_o3qko"]
[ext_resource type="FontFile" uid="uid://pfhnjg6a8hhb" path="res://Assets/Fonts/spell-tactics-energy.ttf" id="6_1xp6h"]
[ext_resource type="Texture2D" uid="uid://chouwpgskph5q" path="res://Assets/Sprites/KenneyParticles/circle_01.png" id="6_55dga"]
[ext_resource type="Texture2D" uid="uid://d4h25l5od8pa1" path="res://Assets/Sprites/KenneyParticles/scorch_01.png" id="7_vwprw"]
[ext_resource type="Texture2D" uid="uid://bk562s5smwwfe" path="res://Assets/Sprites/KenneyParticles/spark_02_big_low.png" id="8_nb4y4"]
[ext_resource type="Texture2D" uid="uid://b40xhjxikn2lv" path="res://Assets/Sprites/KenneyParticles/spark_04.png" id="9_53r0n"]
[ext_resource type="Texture2D" uid="uid://twvr103kl43t" path="res://Assets/Sprites/KenneyParticles/star_04.png" id="10_c4be7"]

[sub_resource type="Shader" id="Shader_wwdoo"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.2.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx,unshaded;

#include \"res://VFX/Materials/lib.gdshaderinc\"

uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color,filter_linear_mipmap,repeat_enable;
uniform float grow;
uniform float point_size : hint_range(0,128);
uniform float roughness : hint_range(0,1);
uniform sampler2D texture_metallic : hint_default_white,filter_linear_mipmap,repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r,filter_linear_mipmap,repeat_enable;
uniform float specular;
uniform float metallic;
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;

uniform float icon_scale  : hint_range(0,5) = 1.0;

void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
	MODELVIEW_MATRIX = VIEW_MATRIX * mat4(INV_VIEW_MATRIX[0], INV_VIEW_MATRIX[1], INV_VIEW_MATRIX[2], MODEL_MATRIX[3]);
	MODELVIEW_MATRIX = MODELVIEW_MATRIX * mat4(vec4(length(MODEL_MATRIX[0].xyz), 0.0, 0.0, 0.0), vec4(0.0, length(MODEL_MATRIX[1].xyz), 0.0, 0.0), vec4(0.0, 0.0, length(MODEL_MATRIX[2].xyz), 0.0), vec4(0.0, 0.0, 0.0, 1.0));
	MODELVIEW_NORMAL_MATRIX = mat3(MODELVIEW_MATRIX);
	VERTEX+=NORMAL*grow;
}

void fragment() {
	vec2 base_uv = UV;
	base_uv.x = mod(base_uv.x, 1.0);
	base_uv.y = mod(base_uv.y, 1.0);
	base_uv = base_uv * icon_scale;
	vec4 albedo_tex = texture(texture_albedo,base_uv) * vec2_between(base_uv, vec2(0.0), vec2(1.0));
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	float metallic_tex = dot(texture(texture_metallic,base_uv),metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	vec4 roughness_texture_channel = vec4(1.0,0.0,0.0,0.0);
	float roughness_tex = dot(texture(texture_roughness,base_uv),roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	SPECULAR = specular;
	ALPHA *= albedo.a * albedo_tex.a;
	ALPHA = float(length(ALBEDO) > .5);
	ALBEDO = vec3(1.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r1thg"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_wwdoo")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/grow = null
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(2, 2, 2)
shader_parameter/uv1_offset = Vector3(0.48, 0.5, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/icon_scale = 1.0
shader_parameter/texture_albedo = ExtResource("2_b67sw")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7h5xp"]
resource_local_to_scene = true
next_pass = SubResource("ShaderMaterial_r1thg")
cull_mode = 1
shading_mode = 0
albedo_color = Color(0.620141, 0.177496, 0.360633, 1)

[sub_resource type="SphereMesh" id="SphereMesh_l3ict"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_napv1"]
cull_mode = 1
shading_mode = 0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_nsbpj"]
seed = 1
fractal_octaves = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0fe2a"]
seamless = true
noise = SubResource("FastNoiseLite_nsbpj")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_awb8t"]
frequency = 0.1044
fractal_type = 0
fractal_octaves = 10

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_32knh"]
seamless = true
seamless_blend_skirt = 0.61
noise = SubResource("FastNoiseLite_awb8t")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7hbyl"]
render_priority = -128
shader = ExtResource("2_2q3is")
shader_parameter/albedo = Color(0.913725, 0, 0.462745, 1)
shader_parameter/albedo2 = Color(1, 0.364706, 0.866667, 1)
shader_parameter/noise = SubResource("NoiseTexture3D_32knh")
shader_parameter/flame_noise = SubResource("NoiseTexture2D_0fe2a")

[sub_resource type="QuadMesh" id="QuadMesh_36cb7"]

[sub_resource type="Animation" id="Animation_d0mwv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrbitalMovement:behaviour_fixed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OrbitalMovement:behaviour_fixed_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OrbitalMovement:behaviour_physics")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OrbitalMovement:behaviour_orbit")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeshInstance3D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.7, 0.7, 0.7)]
}

[sub_resource type="Animation" id="Animation_xptq4"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.7, 0.7, 0.7), Vector3(1, 1, 1), Vector3(0.1, 0.1, 0.1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"delete"
}]
}

[sub_resource type="Animation" id="Animation_j7sqj"]
resource_name = "spawn"
length = 5.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrbitalMovement:behaviour_fixed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.78),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OrbitalMovement:behaviour_fixed_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.78),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OrbitalMovement")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"base_jump"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OrbitalMovement:behaviour_physics")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.78, 0.79, 1.5, 2.38),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OrbitalMovement:behaviour_orbit")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.5, 2.38),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_v73xb"]
resource_name = "spawn_in_ui"
length = 5.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrbitalMovement:behaviour_fixed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OrbitalMovement:behaviour_fixed_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OrbitalMovement:behaviour_physics")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.75, 0.76, 0.9, 1.06),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OrbitalMovement:behaviour_orbit")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.9, 1.06),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cuin4"]
_data = {
"RESET": SubResource("Animation_d0mwv"),
"death": SubResource("Animation_xptq4"),
"spawn": SubResource("Animation_j7sqj"),
"spawn_in_ui": SubResource("Animation_v73xb")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_xbhwi"]
radius = 0.177107

[sub_resource type="Curve" id="Curve_vhk1f"]
_data = [Vector2(0, 0.010989), 0.0, 0.0, 0, 0, Vector2(0.472222, 0.868132), -0.24158, -0.24158, 0, 0, Vector2(0.546296, 0.868132), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_o27ji"]
curve = SubResource("Curve_vhk1f")

[sub_resource type="Curve" id="Curve_lg4n2"]
min_value = 0.5
max_value = 0.8
_data = [Vector2(0.0138889, 0.684615), 0.0, -0.00809191, 0, 0, Vector2(0.99537, 0.579121), -0.246492, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bb5sa"]
curve = SubResource("Curve_lg4n2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vdxn8"]
gravity = Vector3(0, 0, 0)
scale_min = 1.2
scale_max = 1.2
scale_curve = SubResource("CurveTexture_bb5sa")
alpha_curve = SubResource("CurveTexture_o27ji")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kmx12"]
resource_local_to_scene = true
render_priority = 1
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("6_55dga")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_fnroj"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_kmx12")

[sub_resource type="Curve" id="Curve_rfpnj"]
_data = [Vector2(0.0462963, 0), 0.0, 0.0, 0, 0, Vector2(0.509259, 0.791209), -0.114853, -0.114853, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_k7ejj"]
curve = SubResource("Curve_rfpnj")

[sub_resource type="Curve" id="Curve_hqjiu"]
_data = [Vector2(0, 0.769401), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_so652"]
curve = SubResource("Curve_hqjiu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8obyo"]
angle_min = 1.0
angle_max = 360.0
gravity = Vector3(0, 0, 0)
scale_min = 0.55
scale_max = 0.7
scale_curve = SubResource("CurveTexture_so652")
alpha_curve = SubResource("CurveTexture_k7ejj")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2whdd"]
resource_local_to_scene = true
render_priority = 3
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.34436, 0.642204, 0.710938, 1)
albedo_texture = ExtResource("7_vwprw")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_rocvn"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_2whdd")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eu3f0"]
resource_local_to_scene = true
render_priority = 2
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.626, 1.786, 1.75, 1)
albedo_texture = ExtResource("8_nb4y4")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_crb73"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_eu3f0")

[sub_resource type="Curve" id="Curve_nebea"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.49537, 0.769231), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ly0n4"]
curve = SubResource("Curve_nebea")

[sub_resource type="Curve" id="Curve_p1fcv"]
_data = [Vector2(0, 0.711752), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jgthm"]
curve = SubResource("Curve_p1fcv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6hhrv"]
emission_shape = 1
emission_sphere_radius = 0.2
angle_min = 1.0
angle_max = 360.0
gravity = Vector3(0, 0, 0)
radial_accel_max = 0.1
scale_min = 0.4
scale_max = 0.8
scale_curve = SubResource("CurveTexture_jgthm")
alpha_curve = SubResource("CurveTexture_ly0n4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gratj"]
resource_local_to_scene = true
render_priority = 5
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(2, 2, 2, 1)
albedo_texture = ExtResource("9_53r0n")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_pa47w"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_gratj")

[sub_resource type="Curve" id="Curve_brn1e"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.238636, 1), 0.0, 0.0, 0, 0, Vector2(0.693182, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_0ui6t"]
curve = SubResource("Curve_brn1e")

[sub_resource type="Curve" id="Curve_214q2"]
_data = [Vector2(0, 0.221729), 0.0, 0.0, 0, 0, Vector2(0.440341, 0.985588), 0.0, 0.0, 0, 0, Vector2(0.627841, 0.971175), 0.0, 0.0, 0, 0, Vector2(1, 0.365854), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_fc60o"]
curve = SubResource("Curve_214q2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_blg16"]
emission_shape = 2
emission_sphere_radius = 0.2
angle_min = 1.0
angle_max = 360.0
spread = 180.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 0.1
radial_accel_max = 0.15
scale_min = 0.17
scale_max = 0.2
scale_curve = SubResource("CurveTexture_fc60o")
alpha_curve = SubResource("CurveTexture_0ui6t")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ajubr"]
resource_local_to_scene = true
render_priority = 6
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 2, 2, 1)
albedo_texture = ExtResource("10_c4be7")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_hwspv"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ajubr")

[sub_resource type="Shader" id="Shader_ffljd"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.2.2.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx,unshaded;
uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color,filter_linear_mipmap,repeat_enable;
uniform float point_size : hint_range(0,128);
uniform float roughness : hint_range(0,1);
uniform sampler2D texture_metallic : hint_default_white,filter_linear_mipmap,repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r,filter_linear_mipmap,repeat_enable;
uniform float specular;
uniform float metallic;
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
	MODELVIEW_MATRIX = VIEW_MATRIX * mat4(INV_VIEW_MATRIX[0], INV_VIEW_MATRIX[1], INV_VIEW_MATRIX[2], MODEL_MATRIX[3]);
	MODELVIEW_MATRIX = MODELVIEW_MATRIX * mat4(vec4(length(MODEL_MATRIX[0].xyz), 0.0, 0.0, 0.0), vec4(0.0, length(MODEL_MATRIX[1].xyz), 0.0, 0.0), vec4(0.0, 0.0, length(MODEL_MATRIX[2].xyz), 0.0), vec4(0.0, 0.0, 0.0, 1.0));
	MODELVIEW_NORMAL_MATRIX = mat3(MODELVIEW_MATRIX);
}






void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	ALPHA = float(albedo_tex.r > .5);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0l4xb"]
resource_local_to_scene = true
render_priority = 7
shader = SubResource("Shader_ffljd")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_albedo = ExtResource("2_b67sw")

[sub_resource type="QuadMesh" id="QuadMesh_vybco"]

[node name="EnergyOrb" type="Node3D"]
script = ExtResource("1_2ps41")

[node name="Orb" type="MeshInstance3D" parent="."]
transform = Transform3D(0.30649, 0, 0, 0, 0.30649, 0, 0, 0, 0.30649, 0, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_7h5xp")
mesh = SubResource("SphereMesh_l3ict")

[node name="Outline" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.315441, 0, 0, 0, 0.315441, 0, 0, 0, 0.315441, 0, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_napv1")
mesh = SubResource("SphereMesh_l3ict")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
visible = false
material_override = SubResource("ShaderMaterial_7hbyl")
mesh = SubResource("QuadMesh_36cb7")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cuin4")
}
speed_scale = 2.0

[node name="OrbitalMovement" parent="." instance=ExtResource("4_o3qko")]

[node name="MouseArea" type="Area3D" parent="." groups=["energy_ui"]]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0
input_ray_pickable = false
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MouseArea"]
shape = SubResource("SphereShape3D_xbhwi")

[node name="Visual" type="Node3D" parent="."]
transform = Transform3D(0.55357, 0, 0, 0, 0.55357, 0, 0, 0, 0.55357, 0, 0, 0)

[node name="Label3D" type="Label3D" parent="Visual"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
offset = Vector2(0, 8)
billboard = 1
double_sided = false
alpha_cut = 2
render_priority = 8
text = "h"
font = ExtResource("6_1xp6h")
font_size = 96
outline_size = 0

[node name="Rings" type="GPUParticles3D" parent="Visual"]
transform = Transform3D(1.13, 0, 0, 0, 1.13, 0, 0, 0, 1.13, 0, 0, 0)
cast_shadow = 0
amount = 4
lifetime = 2.0
visibility_aabb = AABB(-1.00001, -1.00001, -1.00001, 2.00002, 2.00002, 2.00002)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_vdxn8")
draw_pass_1 = SubResource("QuadMesh_fnroj")

[node name="Core" type="GPUParticles3D" parent="Visual"]
cast_shadow = 0
amount = 4
visibility_aabb = AABB(-1.00001, -1.00001, -1.00001, 2.00002, 2.00002, 2.00002)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_8obyo")
draw_pass_1 = SubResource("QuadMesh_rocvn")

[node name="Energy" type="GPUParticles3D" parent="Visual"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
cast_shadow = 0
amount = 4
visibility_aabb = AABB(-1.00001, -1.00001, -1.00001, 2.00002, 2.00002, 2.00002)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_8obyo")
draw_pass_1 = SubResource("QuadMesh_crb73")

[node name="Sparks" type="GPUParticles3D" parent="Visual"]
cast_shadow = 0
amount = 4
visibility_aabb = AABB(-1.18586, -1.0932, -1.17149, 2.33288, 2.30955, 2.3185)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_6hhrv")
draw_pass_1 = SubResource("QuadMesh_pa47w")

[node name="Particles" type="GPUParticles3D" parent="Visual"]
cast_shadow = 0
visibility_aabb = AABB(-1.17894, -1.19363, -1.18363, 2.42038, 2.39935, 2.33977)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_blg16")
draw_pass_1 = SubResource("QuadMesh_hwspv")

[node name="Icon" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(0.526425, 0, 0, 0, 0.526425, 0, 0, 0, 0.526425, 0, 0, 0)
visible = false
material_override = SubResource("ShaderMaterial_0l4xb")
cast_shadow = 0
mesh = SubResource("QuadMesh_vybco")
